--- a/src/app/layout/orders/orders.component.html
+++ b/src/app/layout/orders/orders.component.html
@@ -12,7 +12,7 @@
             </div>
         </div>
     </div>
-    <div class="card mb-3 bg-dark">
+    <div class="card mb-3 bg-dark orders">
         <div class="card-header">
             Orders
         </div>
