--- a/src/app/layout/orders/orders.component.scss
+++ b/src/app/layout/orders/orders.component.scss
@@ -9,7 +9,7 @@
 }
 
 .view-state-disabled {
-    background-color: rgba(0,0,0,.075);
+    background-color: rgba(0, 0, 0, .075);
 }
 
 @keyframes rotating {
@@ -28,4 +28,7 @@
         transform: rotate(360deg);
     }
 }
-  
+
+.orders {
+    overflow-x: auto;
+}
