--- a/src/app/layout/trading-automation/add-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
@@ -4,12 +4,18 @@
             <label for="maxBuyPrice">Max buy price</label>
             <input name="maxBuyPrice"
                    class="form-control"
-                   type="number"
-                   min="0.00000001"
-                   max="9999999999"
-                   value="0.0"
-                   (input)="onMaxBuyPrice($event.target)"
-                   required>
+                   type="text"
+                   required
+                   pattern="^\s*(?=.*[1-9])\d*(?:\.\d{1,8})?\s*$"
+                   [class.is-invalid]="maxBuyPriceInput.invalid
+                                && (maxBuyPriceInput.dirty
+                                || maxBuyPriceInput.touched)"
+                   [(ngModel)]="strategySpecificParameters.maxBuyPrice"
+                   #maxBuyPriceInput="ngModel"
+                   (input)="onMaxBuyPrice($event.target)">
+            <div class="invalid-feedback">
+                Provide valid price, eg. 1.00045 (max 8 decimal places)
+            </div>
         </div>
     </div>
     <div class="col-md-6">
@@ -17,15 +23,20 @@
             <label for="dropToBuyNextRelativePercent">Drop to buy next</label>
             <div class="input-group">
                 <input name="dropToBuyNextRelativePercent" class="form-control"
-                       type="number"
-                       min="0.1"
-                       max="50"
-                       value="0.5"
-                       step="0.1"
-                       (input)="onDropToBuyNextRelativePercent($event.target)"
-                       required>
+                       type="text"
+                       required
+                       pattern="^\s*(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?\s*$"
+                       [class.is-invalid]="dropToBuyNextRelativePercentInput.invalid
+                                && (dropToBuyNextRelativePercentInput.dirty
+                                || dropToBuyNextRelativePercentInput.touched)"
+                       [(ngModel)]="strategySpecificParameters.dropToBuyNextRelativePercent"
+                       #dropToBuyNextRelativePercentInput="ngModel"
+                       (input)="onDropToBuyNextRelativePercent($event.target)">
                 <div class="input-group-append">
                     <span class="input-group-text">%</span>
+                </div>
+                <div class="invalid-feedback">
+                    Provide valid percent, eg. 2.5 (max 2 decimal places)
                 </div>
             </div>
         </div>
