--- a/src/app/layout/trading-automation/add-strategy-execution/buy-now-parameters/buy-now-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/buy-now-parameters/buy-now-parameters.component.html
@@ -1,14 +1,21 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-12">
         <div class="form-group">
             <label for="maxBuyPrice">Max buy price</label>
             <input name="maxBuyPrice"
-                   type="number"
                    class="form-control"
-                   min="0.00000001"
-                   max="9999999999"
-                   value="0.0"
-                   (input)="onMaxBuyPrice($event.target)" required>
+                   type="text"
+                   required
+                   pattern="^\s*(?=.*[1-9])\d*(?:\.\d{1,8})?\s*$"
+                   [class.is-invalid]="maxBuyPriceInput.invalid
+                                && (maxBuyPriceInput.dirty
+                                || maxBuyPriceInput.touched)"
+                   [(ngModel)]="strategySpecificParameters.maxBuyPrice"
+                   #maxBuyPriceInput="ngModel"
+                   (input)="onMaxBuyPrice($event.target)">
+            <div class="invalid-feedback">
+                Provide valid price, eg. 1.00045 (max 8 decimal places)
+            </div>
         </div>
     </div>
 </div>
