--- a/src/app/layout/trading-automation/add-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
@@ -1,31 +1,42 @@
 <div class="row">
     <div class="col-md-6">
         <div class="form-group">
-            <label for="maxBuyPrice">Min sell price</label>
-            <input name="maxBuyPrice"
-                   type="number"
-                   value="0.0"
-                   min="0.00000001"
-                   max="9999999999"
+            <label for="minSellPrice">Min sell price</label>
+            <input name="minSellPrice"
                    class="form-control"
-                   (input)="onMinSellPrice($event.target)"
-                   required>
+                   type="text"
+                   required
+                   pattern="^\s*(?=.*[1-9])\d*(?:\.\d{1,8})?\s*$"
+                   [class.is-invalid]="minSellPriceInput.invalid
+                                && (minSellPriceInput.dirty
+                                || minSellPriceInput.touched)"
+                   [(ngModel)]="strategySpecificParameters.minSellPrice"
+                   #minSellPriceInput="ngModel"
+                   (input)="onMinSellPrice($event.target)">
+            <div class="invalid-feedback">
+                Provide valid amount, eg. 1.00045 (max 8 decimal places)
+            </div>
         </div>
     </div>
     <div class="col-md-6">
         <div class="form-group">
             <label for="growToSellNextRelativePercent">Grow to sell next</label>
             <div class="input-group">
-                <input name="growToSellNextRelativePercent"
-                       class="form-control"
-                       type="number"
-                       min="0.1"
-                       max="50"
-                       value="0.5"
-                       step="0.1"
+                <input name="growToSellNextRelativePercent" class="form-control"
+                       type="text"
+                       required
+                       pattern="^\s*(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?\s*$"
+                       [class.is-invalid]="growToSellNextRelativePercentInput.invalid
+                                && (growToSellNextRelativePercentInput.dirty
+                                || growToSellNextRelativePercentInput.touched)"
+                       [(ngModel)]="strategySpecificParameters.growToSellNextRelativePercent"
+                       #growToSellNextRelativePercentInput="ngModel"
                        (input)="onGrowToSellNextRelativePercent($event.target)">
                 <div class="input-group-append">
                     <span class="input-group-text">%</span>
+                </div>
+                <div class="invalid-feedback">
+                    Provide valid percent, eg. 2.5 (max 2 decimal places)
                 </div>
             </div>
         </div>
