--- a/src/app/layout/trading-automation/add-strategy-execution/sell-when-second-currency-grows-parameters/sell-when-second-currency-grows-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/sell-when-second-currency-grows-parameters/sell-when-second-currency-grows-parameters.component.html
@@ -1,39 +1,64 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-12">
         <div class="form-group">
-            <label for="pricesTriggeringSale">Prices of second currency pair triggering sales, eg 4500, 5000.5</label>
-            <input name="pricesTriggeringSale"
-                   class="form-control"
-                   (input)="onPricesTriggeringSale($event.target)"
-                   required>
+            <label for="secondCurrencyPairToWatch">Second currency pair to watch, eg. BTC/USDT</label>
+            <div class="input-group">
+                <input name="secondCurrencyPairToWatch"
+                       class="form-control"
+                       type="text"
+                       required
+                       pattern="[a-zA-Z]+/[a-zA-Z]+"
+                       [class.is-invalid]="secondCurrencyPairToWatchInput.invalid
+                                && (secondCurrencyPairToWatchInput.dirty
+                                || secondCurrencyPairToWatchInput.touched)"
+                       [(ngModel)]="strategySpecificParameters.secondCurrencyPairToWatch"
+                       #secondCurrencyPairToWatchInput="ngModel"
+                       (input)="$event.target.value = $event.target.value.toUpperCase(); onSecondCurrencyPairToWatch($event.target)">
+                <div class="invalid-feedback">
+                    Provide valid second currency pair to watch, eg. BTC/USDT
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-12">
         <div class="form-group">
-            <label for="minSellPrice">Min sell price</label>
-            <input name="maxBuyPrice" class="form-control"
-                   type="number"
-                   min="0.00000001"
-                   max="9999999999"
-                   value="0.0"
-                   (input)="onMinSellPrice($event.target)"
-                   required>
+            <label for="pricesTriggeringSale">Prices of second currency pair triggering sales, eg. 4500, 5000.5</label>
+            <input name="secondCurrencyPricesTriggeringSale"
+                   type="text"
+                   pattern="^(\d+(\.\d+){0,1})((\ )*,(\ )*(\d+(\.\d+){0,1}))*$"
+                   required
+                   class="form-control"
+                   [class.is-invalid]="secondCurrencyPricesTriggeringSaleInput.invalid
+                                && (secondCurrencyPricesTriggeringSaleInput.dirty
+                                || secondCurrencyPricesTriggeringSaleInput.touched)"
+                   [(ngModel)]="strategySpecificParameters.secondCurrencyPricesTriggeringSale"
+                   #secondCurrencyPricesTriggeringSaleInput="ngModel"
+                   (input)="onSecondCurrencyPricesTriggeringSale($event.target)">
+            <div class="invalid-feedback">
+                Provide valid prices list, eg. 4500, 5000.5, 5050.00067
+            </div>
         </div>
     </div>
-    <div class="col-md-6">
+</div>
+<div class="row">
+    <div class="col-12">
         <div class="form-group">
-            <label for="secondCurrencyPairToWatch">Second currency pair to watch, eg BTC/USDT</label>
-            <div class="input-group">
-                <input name="secondCurrencyPairToWatch"
-                       class="form-control"
-                       type="text" pattern="[A-Z]+/[A-Z]+"
-                       (input)="onSecondCurrencyPairToWatch($event.target)"
-                       required>
-                <div class="input-group-append">
-                    <span class="input-group-text">$</span>
-                </div>
+            <label for="minSellPrice">Min sell price</label>
+            <input name="maxBuyPrice"
+                   class="form-control"
+                   type="text"
+                   required
+                   pattern="^\s*(?=.*[1-9])\d*(?:\.\d{1,8})?\s*$"
+                   [class.is-invalid]="minSellPriceInput.invalid
+                                && (minSellPriceInput.dirty
+                                || minSellPriceInput.touched)"
+                   [(ngModel)]="strategySpecificParameters.minSellPrice"
+                   #minSellPriceInput="ngModel"
+                   (input)="onMinSellPrice($event.target)">
+            <div class="invalid-feedback">
+                Provide valid amount, eg. 1.00045 (max 8 decimal places)
             </div>
         </div>
     </div>
