--- a/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
@@ -51,7 +51,7 @@
                        pattern="^[a-zA-Z]+/[a-zA-Z]+$"
                        required
                        [class.is-invalid]="currencyPairInput.invalid
-                       && (currencyPairInput.dirty || currencyPairInput.touched)"
+                       && (currencyPairInput.dirty || currencyPairInput.touched || currencyPairInput.untouched)"
                        [(ngModel)]="currencyPair"
                        #currencyPairInput="ngModel"
                        (input)="$event.target.value = $event.target.value.toUpperCase()">
@@ -63,10 +63,10 @@
         <div class="col-xs-12 col-xl-8">
             <div *ngIf="isBuying()" class="form-group">
                 <label *ngIf="isUsingCounterCurrencyLimitAsFraction">
-                    Buy limit (max {{counterCurrency()}} % to sell of current amount in wallet)
+                    Buy {{ baseCurrency() }} limit (max {{counterCurrency()}} % to sell of current amount in wallet)
                 </label>
                 <label *ngIf="!isUsingCounterCurrencyLimitAsFraction">
-                    Buy limit (max {{counterCurrency()}} amount to sell)
+                    Buy {{ baseCurrency() }} limit (max {{counterCurrency()}} amount to sell)
                 </label>
                 <div class="input-group">
                     <button (click)="useCounterCurrencyLimitAsFraction()" type="button"
@@ -85,33 +85,92 @@
                         <input name="counterCurrencyPercentLimitForBuying"
                                type="text"
                                required
-                               pattern="^\s*(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?\s*$"
+                               pattern="^(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?$"
                                class="form-control"
                                [class.is-invalid]="counterCurrencyPercentLimitForBuyingInput.invalid
                                 && (counterCurrencyPercentLimitForBuyingInput.dirty
-                                || counterCurrencyPercentLimitForBuyingInput.touched)"
+                                || counterCurrencyPercentLimitForBuyingInput.touched
+                                || counterCurrencyPercentLimitForBuyingInput.untouched)"
                                [(ngModel)]="counterCurrencyPercentLimitForBuying"
                                #counterCurrencyPercentLimitForBuyingInput="ngModel">
                         <div class="input-group-append">
                             <span class="input-group-text">%</span>
                         </div>
                         <div class="invalid-feedback">
-                            Provide valid percent, eg. 2.5 (max 2 decimal places)
+                            Provide valid percent, eg. 2.55 (max 2 decimal places)
                         </div>
                     </ng-container>
                     <ng-container *ngIf="!isUsingCounterCurrencyLimitAsFraction">
                         <input name="counterCurrencyAmountLimitForBuying"
                                type="text"
-                               pattern="^\s*(?=.*[1-9])\d*(?:\.\d{1,8})?\s*$"
+                               pattern="^(?=.*[1-9])\d+(?:\.\d{1,8})?$"
                                required
                                class="form-control"
                                [class.is-invalid]="counterCurrencyAmountLimitForBuyingInput.invalid
                                 && (counterCurrencyAmountLimitForBuyingInput.dirty
-                                || counterCurrencyAmountLimitForBuyingInput.touched)"
+                                || counterCurrencyAmountLimitForBuyingInput.touched
+                                || counterCurrencyAmountLimitForBuyingInput.untouched)"
                                [(ngModel)]="counterCurrencyAmountLimitForBuying"
                                #counterCurrencyAmountLimitForBuyingInput="ngModel">
                         <div class="invalid-feedback">
                             Provide valid amount, eg. 1.00045 (max 8 decimal places)
+                        </div>
+                    </ng-container>
+                </div>
+            </div>
+            <div *ngIf="isBuying()" class="form-group">
+                <label *ngIf="isUsingCounterCurrencyMinLimitToHoldAsFraction">
+                    Min {{counterCurrency()}} % to hold of current amount wallet
+                </label>
+                <label *ngIf="!isUsingCounterCurrencyMinLimitToHoldAsFraction">
+                    Min {{counterCurrency()}} amount to hold in wallet
+                </label>
+                <div class="input-group">
+                    <button (click)="useCounterCurrencyMinLimitToHoldAsFraction()" type="button"
+                            class="btn mr-1"
+                            [class.btn-secondary]="!isUsingCounterCurrencyMinLimitToHoldAsFraction"
+                            [class.btn-success]="isUsingCounterCurrencyMinLimitToHoldAsFraction">
+                        %
+                    </button>
+                    <button (click)="useCounterCurrencyMinLimitToHoldAsAmount()" type="button"
+                            class="btn mr-1"
+                            [class.btn-secondary]="isUsingCounterCurrencyMinLimitToHoldAsFraction"
+                            [class.btn-success]="!isUsingCounterCurrencyMinLimitToHoldAsFraction">
+                        123
+                    </button>
+                    <ng-container *ngIf="isUsingCounterCurrencyMinLimitToHoldAsFraction">
+                        <input name="counterCurrencyMinPercentLimitToHold"
+                               type="text"
+                               required
+                               pattern="^(?=.*[0-9])\d{1,2}(?:\.\d{1,2})?$"
+                               class="form-control"
+                               [class.is-invalid]="counterCurrencyMinPercentLimitToHoldInput.invalid
+                                && (counterCurrencyMinPercentLimitToHoldInput.dirty
+                                || counterCurrencyMinPercentLimitToHoldInput.touched
+                                || counterCurrencyMinPercentLimitToHoldInput.untouched)"
+                               [(ngModel)]="counterCurrencyMinPercentLimitToHold"
+                               #counterCurrencyMinPercentLimitToHoldInput="ngModel">
+                        <div class="input-group-append">
+                            <span class="input-group-text">%</span>
+                        </div>
+                        <div class="invalid-feedback">
+                            Provide valid percent, eg. 2.5 (max 2 decimal places) or 0
+                        </div>
+                    </ng-container>
+                    <ng-container *ngIf="!isUsingCounterCurrencyMinLimitToHoldAsFraction">
+                        <input name="counterCurrencyMinAmountLimitToHold"
+                               type="text"
+                               pattern="^(?=.*[0-9])\d+(?:\.\d{1,8})?$"
+                               required
+                               class="form-control"
+                               [class.is-invalid]="counterCurrencyMinAmountLimitToHoldInput.invalid
+                                && (counterCurrencyMinAmountLimitToHoldInput.dirty
+                                || counterCurrencyMinAmountLimitToHoldInput.touched
+                                || counterCurrencyMinAmountLimitToHoldInput.untouched)"
+                               [(ngModel)]="counterCurrencyMinAmountLimitToHold"
+                               #counterCurrencyMinAmountLimitToHoldInput="ngModel">
+                        <div class="invalid-feedback">
+                            Provide valid amount, eg. 1.00045 (max 8 decimal places) or 0
                         </div>
                     </ng-container>
                 </div>
@@ -141,7 +200,7 @@
                                type="text"
                                class="form-control"
                                required
-                               pattern="^\s*(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?\s*$"
+                               pattern="^(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?$"
                                [(ngModel)]="baseCurrencyPercentLimitForSelling"
                                #baseCurrencyPercentLimitForSellingInput="ngModel"
                                [class.is-invalid]="baseCurrencyPercentLimitForSellingInput.invalid
@@ -159,7 +218,7 @@
                                type="text"
                                class="form-control"
                                required
-                               pattern="^\s*(?=.*[1-9])\d*(?:\.\d{1,8})?\s*$"
+                               pattern="^(?=.*[1-9])\d+(?:\.\d{1,8})?$"
                                [(ngModel)]="baseCurrencyAmountLimitForSelling"
                                #baseCurrencyAmountLimitForSellingInput="ngModel"
                                [class.is-invalid]="baseCurrencyAmountLimitForSellingInput.invalid
@@ -178,17 +237,18 @@
                            type="text"
                            class="form-control"
                            required
-                           pattern="^\s*(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?\s*$"
+                           pattern="^(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?$"
                            [(ngModel)]="counterCurrencyPercentForBuyingPerOrder"
                            [class.is-invalid]="counterCurrencyPercentForBuyingPerOrderInput.invalid
                                 && (counterCurrencyPercentForBuyingPerOrderInput.dirty
-                                || counterCurrencyPercentForBuyingPerOrderInput.touched)"
+                                || counterCurrencyPercentForBuyingPerOrderInput.touched
+                                || counterCurrencyPercentForBuyingPerOrderInput.untouched)"
                            #counterCurrencyPercentForBuyingPerOrderInput="ngModel">
                     <div class="input-group-append">
                         <span class="input-group-text">%</span>
                     </div>
                     <div class="invalid-feedback">
-                        Provide valid percent, eg. 2.5 (max 2 decimal places)
+                        Provide valid percent, eg. 2.55 (max 2 decimal places)
                     </div>
                 </div>
             </div>
@@ -198,12 +258,13 @@
                     <input name="baseCurrencyPercentForSellingPerOrder"
                            type="text"
                            required
-                           pattern="^\s*(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?\s*$"
+                           pattern="^(?=.*[1-9])\d{1,2}(?:\.\d{1,2})?$"
                            class="form-control"
                            [(ngModel)]="baseCurrencyPercentForSellingPerOrder"
                            [class.is-invalid]="baseCurrencyPercentForSellingPerOrderInput.invalid
                                 && (baseCurrencyPercentForSellingPerOrderInput.dirty
-                                || baseCurrencyPercentForSellingPerOrderInput.touched)"
+                                || baseCurrencyPercentForSellingPerOrderInput.touched
+                                || baseCurrencyPercentForSellingPerOrderInput.untouched)"
                            #baseCurrencyPercentForSellingPerOrderInput="ngModel">
                     <div class="input-group-append">
                         <span class="input-group-text">%</span>
