--- a/src/app/layout/trading-automation/add-strategy-execution/buy-now-parameters/buy-now-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/buy-now-parameters/buy-now-parameters.component.html
@@ -6,10 +6,11 @@
                    class="form-control"
                    type="text"
                    required
-                   pattern="^\s*(?=.*[1-9])\d*(?:\.\d{1,8})?\s*$"
+                   pattern="^(?=.*[1-9])\d+(?:\.\d{1,8})?$"
                    [class.is-invalid]="maxBuyPriceInput.invalid
                                 && (maxBuyPriceInput.dirty
-                                || maxBuyPriceInput.touched)"
+                                || maxBuyPriceInput.touched
+                                || maxBuyPriceInput.untouched)"
                    [(ngModel)]="strategySpecificParameters.maxBuyPrice"
                    #maxBuyPriceInput="ngModel"
                    (input)="onMaxBuyPrice($event.target)">
